[gd_scene load_steps=15 format=4 uid="uid://cfr7v288b4fg3"]

[ext_resource type="Texture2D" uid="uid://cj8sfbb87fepi" path="res://assets/Tileset_Templates/Tileset_2D Platformer.png" id="1_8mm7a"]
[ext_resource type="Script" uid="uid://rc5x3jobg8bc" path="res://scripts/character_body_2d.gd" id="2_hq1ik"]
[ext_resource type="Texture2D" uid="uid://c1g0gtsufltck" path="res://assets/placeholder-char.png" id="3_nfk4m"]
[ext_resource type="Script" uid="uid://bn74q8prfbn6r" path="res://scripts/biscuit.gd" id="4_66tet"]
[ext_resource type="Texture2D" uid="uid://c2ccsl0fjy1y" path="res://icon.svg" id="5_7ycvg"]
[ext_resource type="Texture2D" uid="uid://cjyr5gfeurecl" path="res://assets/placeholder-enemy.png" id="6_hq1ik"]
[ext_resource type="Script" uid="uid://b5m2flqs2ju6b" path="res://scripts/enemy.gd" id="6_nfk4m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_001wa"]
texture = ExtResource("1_8mm7a")
1:0/0 = 0
2:0/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
12:7/0 = 0
14:7/0 = 0
15:7/0 = 0
18:7/0 = 0
19:7/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
14:2/next_alternative_id = 2
14:2/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_lpbtr"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_001wa")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfk4m"]
size = Vector2(12, 15)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wfnts"]
distance = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viylu"]

[sub_resource type="LabelSettings" id="LabelSettings_kh07m"]
font_size = 14

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq1ik"]
size = Vector2(12, 15)

[node name="Node2D" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-8, -2)
tile_map_data = PackedByteArray("AAALABYAAAADAAkAAAAMABYAAAADAAkAAAANABYAAAADAAkAAAAOABYAAAADAAkAAAAPABYAAAADAAkAAAAQABYAAAAEAAkAAAASABQAAAABAAkAAAAUABIAAAABAAkAAAAWABAAAAACAAkAAAAXABAAAAADAAkAAAAYABAAAAADAAkAAAAZABAAAAADAAkAAAAaABAAAAADAAkAAAAbABAAAAAEAAkAAAAdAA4AAAABAAgAAAAdAA0AAAABAAcAAAAdAAwAAAABAAcAAAAdAAsAAAABAAcAAAAdAAoAAAABAAYAAAAgAAgAAAADAAkAAAAhAAgAAAADAAkAAAAKABYAAAACAAkAAAAfAAgAAAACAAkAAAAiAAgAAAADAAkAAAAjAAgAAAADAAkAAAAkAAgAAAAEAAkAAAA=")
tile_set = SubResource("TileSet_lpbtr")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(210, 335)
script = ExtResource("2_hq1ik")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
drag_horizontal_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_nfk4m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_nfk4m")

[node name="RespawnTimer" type="Timer" parent="Player"]
wait_time = 1.5
one_shot = true

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(622, 456)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
shape = SubResource("WorldBoundaryShape2D_wfnts")

[node name="Biscuit" type="Area2D" parent="."]
position = Vector2(536, 113)
script = ExtResource("4_66tet")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Biscuit"]
position = Vector2(2.38419e-07, 3.57628e-07)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("5_7ycvg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Biscuit"]
shape = SubResource("RectangleShape2D_viylu")

[node name="Label" type="Label" parent="Biscuit"]
offset_left = -22.0
offset_top = -36.0
offset_right = 24.0
offset_bottom = -16.0
text = "Biscuit"
label_settings = SubResource("LabelSettings_kh07m")

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(429, 246)
script = ExtResource("6_nfk4m")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture = ExtResource("6_hq1ik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hq1ik")

[node name="RayCast2D" type="RayCast2D" parent="Enemy"]
target_position = Vector2(0, 23)

[connection signal="timeout" from="Player/RespawnTimer" to="Player" method="_on_respawn_timer_timeout"]
[connection signal="body_entered" from="KillZone" to="Player" method="_on_kill_zone_body_entered"]
[connection signal="body_entered" from="Biscuit" to="Biscuit" method="_on_body_entered"]
[connection signal="tree_exiting" from="Biscuit" to="Player" method="_on_biscuit_tree_exiting"]
